# fastapi-staff-salary

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
employee_service/: auth.py  main.py  models.py  server.py  storage.py
tests/: models.py  test_.py
